tests/fixtures/errors/reassign_const.chisa
const x = 42
x = 99
